--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crossbeam-channel = "0.2.4"
 log = "0.4.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+shred-derive = "0.5"
 
 [dev-dependencies]
 env_logger = "0.5.13"
