--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 amethyst = "0.8"
 crossbeam-channel = "0.2.4"
 log = "0.4.4"
+log-once = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 shred-derive = "0.5"
