--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ readme = "README.md"
 amethyst = "0.8"
 crossbeam-channel = "0.2.4"
 log = "0.4.4"
+log-once = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+shred-derive = "0.5"
 
 [dev-dependencies]
 env_logger = "0.5.13"
