--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ shred-derive = "0.5"
 [dev-dependencies]
 env_logger = "0.5.13"
 skeptic = "0.13"
+tap = "0.3.0"
 
 [build-dependencies]
 skeptic = "0.13"
